refactor: refactoring CRLF, spaces...

--- a/exemples.html
+++ b/exemples.html
@@ -86,7 +86,6 @@
         // Learn about plugins: https://revealjs.com/plugins/
         plugins: [ RevealLoadContent, RevealMarkdown, RevealHighlight, RevealNotes ],
         backgroundTransition: 'fade',
-        //showNotes: true,
         transition: 'slide',  // none/fade/slide/convex/concave/zoom
         transitionSpeed: 'slow', // default/fast/slow
         controls: true,
@@ -97,7 +96,7 @@
         loop: false,
         pdfMaxPagesPerSlide: 1,
         pdfSeparateFragments: false,
-        // pour afficher les notes dans l’overlay au bas de chaque slide :
+        // pour afficher les notes dans l'overlay au bas de chaque slide :
         showNotes: true
       });
     </script>
