--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         loop: false,
         pdfMaxPagesPerSlide: 1,
         pdfSeparateFragments: false,
-        // pour afficher les notes dans l’overlay au bas de chaque slide :
+        // pour afficher les notes dans l'overlay au bas de chaque slide :
         showNotes: false
       });
     </script>
