--- a/slides/16_concepts_A_Theoremes.html
+++ b/slides/16_concepts_A_Theoremes.html
@@ -136,7 +136,7 @@
           HBase, BigTable : 🔴 CP<br>
           Elasticsearch : 🟢 AP
         </td>
-        <td>Cassandra dérivé de Dynamo ; HBase/BigTable visent la cohérence forte ; Elasticsearch tolère l’incohérence</td>
+        <td>Cassandra dérivé de Dynamo ; HBase/BigTable visent la cohérence forte ; Elasticsearch tolère l'incohérence</td>
       </tr>
       <tr>
         <td>Document</td>
