--- a/slides/41_saga.html
+++ b/slides/41_saga.html
@@ -8,14 +8,14 @@
       <li>Exemple de code (Node.js/Mongoose)</li>
       <li>Avantages & inconvénients</li>
       <li>Bonnes pratiques & pièges</li>
-      <li>Retour d’expérience</li>
+      <li>Retour d'expérience</li>
       <li>Quiz & QCM</li>
       <li>Bibliographie</li>
     </ul>
     <aside class="notes">
       <ul>
         <li>Découverte du pattern Saga pour la gestion des transactions dans les architectures distribuées/microservices.</li>
-        <li>Nous allons comprendre son intérêt, ses variantes, comment l’implémenter, et les pièges à éviter.</li>
+        <li>Nous allons comprendre son intérêt, ses variantes, comment l'implémenter, et les pièges à éviter.</li>
       </ul>
     </aside>
   </section>
@@ -25,12 +25,12 @@
     <h2>Définition du Saga Pattern</h2>
     <ul>
       <li>Gestion de transactions longues ou distribuées sans verrou global</li>
-      <li>Découpage en une séquence d’étapes locales, chaque étape ayant une action de compensation</li>
+      <li>Découpage en une séquence d'étapes locales, chaque étape ayant une action de compensation</li>
       <li>Deux grandes variantes : orchestré (centralisé) ou chorégraphié (découplé)</li>
     </ul>
     <aside class="notes">
       <ul>
-        <li>Le pattern Saga évite les verrous distribués en remplaçant la transaction globale par une suite d’opérations atomiques locales, compensables si l’une échoue.</li>
+        <li>Le pattern Saga évite les verrous distribués en remplaçant la transaction globale par une suite d'opérations atomiques locales, compensables si l'une échoue.</li>
         <li>Indispensable dans un système de microservices.</li>
       </ul>
     </aside>
@@ -40,12 +40,12 @@
   <section>
     <h2>Types de Sagas</h2>
     <ul>
-      <li><b>Orchestration :</b> Un service central (“orchestrator”) contrôle l’ordre et déclenche les compensations.</li>
+      <li><b>Orchestration :</b> Un service central (“orchestrator”) contrôle l'ordre et déclenche les compensations.</li>
       <li><b>Chorégraphie :</b> Chaque service réagit aux événements, pas de coordination centrale.</li>
     </ul>
     <aside class="notes">
       <ul>
-        <li>L’orchestration simplifie la vue d’ensemble et le débogage mais introduit un point de coordination unique.</li>
+        <li>L'orchestration simplifie la vue d'ensemble et le débogage mais introduit un point de coordination unique.</li>
         <li>La chorégraphie favorise le découplage mais rend la séquence plus difficile à suivre.</li>
       </ul>
     </aside>
@@ -70,12 +70,12 @@
   </div>
     <aside class="notes">
       <ul>
-        <li>Le client initie la transaction ; l’orchestrateur contrôle chaque étape et lance les actions compensatoires en cas d’échec.</li>
+        <li>Le client initie la transaction ; l'orchestrateur contrôle chaque étape et lance les actions compensatoires en cas d'échec.</li>
       </ul>
     </aside>
   </section>
   
-  <!-- Slide 5: Exemple d’application basée sur Node.js/Mongoose (pseudo-code) -->
+  <!-- Slide 5: Exemple d'application basée sur Node.js/Mongoose (pseudo-code) -->
   <section>
     <h2>Exemple Node.js : Saga Orchestrée (pseudo-code)</h2>
     <pre><code class="language-js">
@@ -95,8 +95,8 @@
     <aside class="notes">
       <ul>
         <li>Chaque étape est un appel de microservice.</li>
-        <li>Si l’envoi d’email échoue, la réservation est annulée (compensation).</li>
-        <li>Ce modèle est directement applicable à l’app “présentation” de la démo.</li>
+        <li>Si l'envoi d'email échoue, la réservation est annulée (compensation).</li>
+        <li>Ce modèle est directement applicable à l'app “présentation” de la démo.</li>
       </ul>
     </aside>
   </section>
@@ -134,7 +134,7 @@
     <aside class="notes">
       <ul>
         <li>Le découplage facilite la montée en charge et la robustesse.</li>
-        <li>Chaque étape pouvant être compensée, on peut revenir à un état cohérent même en cas d’échec partiel.</li>
+        <li>Chaque étape pouvant être compensée, on peut revenir à un état cohérent même en cas d'échec partiel.</li>
       </ul>
     </aside>
   </section>
@@ -143,14 +143,14 @@
   <section>
     <h2>Inconvénients / limites</h2>
     <ul>
-      <li>Complexité accrue de gestion des cas d’erreur</li>
+      <li>Complexité accrue de gestion des cas d'erreur</li>
       <li>Latence potentielle (actions asynchrones)</li>
       <li>Scénarios de compensation parfois difficiles à écrire</li>
       <li>Tests & debug plus complexes</li>
     </ul>
     <aside class="notes">
       <ul>
-        <li>Il faut bien prévoir tous les cas d’échec pour éviter les états incohérents.</li>
+        <li>Il faut bien prévoir tous les cas d'échec pour éviter les états incohérents.</li>
         <li>La multiplication des messages peut rendre le suivi plus difficile.</li>
       </ul>
     </aside>
@@ -161,9 +161,9 @@
     <h2>Best practices</h2>
     <ul>
       <li>Définir des actions de compensation pour chaque étape</li>
-      <li>Centraliser la gestion des erreurs dans l’orchestration</li>
+      <li>Centraliser la gestion des erreurs dans l'orchestration</li>
       <li>Utiliser des identifiants de corrélation pour le tracking</li>
-      <li>Automatiser les tests sur les chemins d’échec</li>
+      <li>Automatiser les tests sur les chemins d'échec</li>
     </ul>
     <aside class="notes">
       <ul>
@@ -185,24 +185,24 @@
     <aside class="notes">
       <ul>
         <li>Un piège classique est de croire que toutes les opérations nécessitent un Saga.</li>
-        <li>Attention à la “compensation destructive” : préférer l’annulation logique ou le flag plutôt que l’effacement irréversible.</li>
+        <li>Attention à la “compensation destructive” : préférer l'annulation logique ou le flag plutôt que l'effacement irréversible.</li>
       </ul>
     </aside>
   </section>
   
-  <!-- Slide 11: Retour d’expérience réel -->
+  <!-- Slide 11: Retour d'expérience réel -->
   <section>
-    <h2>Retour d’expérience : Booking.com</h2>
+    <h2>Retour d'expérience : Booking.com</h2>
     <ul>
       <li>Mise en place de Sagas pour gérer réservations atomiques multi-services (paiement, stock, confirmation, emails)</li>
       <li>Orchestration centralisée avec logs de corrélation</li>
-      <li>Résilience améliorée mais coût d’implémentation élevé</li>
+      <li>Résilience améliorée mais coût d'implémentation élevé</li>
       <li><a href="https://medium.com/booking-com-infrastructure/sagas-at-scale-lessons-learned-from-7-years-in-production-17e4cfb2fa96" target="_blank">Article Medium (Booking.com)</a></li>
     </ul>
     <aside class="notes">
       <ul>
-        <li>Lisez l’article pour des retours précis sur les succès et difficultés de Booking.com à grande échelle !</li>
-        <li>Points clés : l’automatisation de la compensation, le monitoring, et la documentation sont essentiels.</li>
+        <li>Lisez l'article pour des retours précis sur les succès et difficultés de Booking.com à grande échelle !</li>
+        <li>Points clés : l'automatisation de la compensation, le monitoring, et la documentation sont essentiels.</li>
       </ul>
     </aside>
   </section>
@@ -219,9 +219,9 @@
     <aside class="notes">
       <ul>
         <li>1. Orchestration : centralisée, Chorégraphie : décentralisée.</li>
-        <li>2. Revenir à un état cohérent en cas d’échec d’une étape.</li>
+        <li>2. Revenir à un état cohérent en cas d'échec d'une étape.</li>
         <li>3. Oublier la compensation, mélanger orchestré et chorégraphié sans justification.</li>
-        <li>4. Non, ce n’est pas adapté à toutes les transactions (overkill pour l’atome simple).</li>
+        <li>4. Non, ce n'est pas adapté à toutes les transactions (overkill pour l'atome simple).</li>
       </ul>
     </aside>
   </section>
@@ -248,20 +248,20 @@
     <ol type="a">
       <li>Est toujours pilotée par un orchestrateur</li>
       <li>Se base sur des événements et des réactions locales</li>
-      <li>N’a jamais de compensation</li>
+      <li>N'a jamais de compensation</li>
     </ol>
   </section>
   <section>
     <h2>Réponse</h2>
-    <p><strong>b)</strong> Elle fonctionne sur un bus d’événements, sans service central.</p>
+    <p><strong>b)</strong> Elle fonctionne sur un bus d'événements, sans service central.</p>
   </section>
   
   <!-- Slide 15: QCM 3 -->
   <section>
     <h2>QCM</h2>
-    <p><strong>Le principal piège d’une saga ?</strong></p>
+    <p><strong>Le principal piège d'une saga ?</strong></p>
     <ol type="a">
-      <li>D’oublier d’implémenter les compensations</li>
+      <li>D'oublier d'implémenter les compensations</li>
       <li>De tout faire dans un seul service</li>
       <li>De tester toutes les erreurs</li>
     </ol>
@@ -291,14 +291,14 @@
     <h2>QCM</h2>
     <p><strong>Quel outil peut faciliter la gestion des sagas ?</strong></p>
     <ol type="a">
-      <li>Kafka ou RabbitMQ (bus d’événements)</li>
+      <li>Kafka ou RabbitMQ (bus d'événements)</li>
       <li>Excel</li>
       <li>Gatling</li>
     </ol>
   </section>
   <section>
     <h2>Réponse</h2>
-    <p><strong>a)</strong> Les bus d’événements sont utilisés pour orchestrer ou chorégraphier les étapes de la saga.</p>
+    <p><strong>a)</strong> Les bus d'événements sont utilisés pour orchestrer ou chorégraphier les étapes de la saga.</p>
   </section>
   
   <!-- Slide 18: Bibliographie & liens -->
@@ -315,7 +315,7 @@
     </ul>
     <aside class="notes">
       <ul>
-        <li>Ces ressources couvrent la théorie, les exemples concrets, et les retours d’expérience de l’industrie.</li>
+        <li>Ces ressources couvrent la théorie, les exemples concrets, et les retours d'expérience de l'industrie.</li>
         <li>Tous les liens ont été vérifiés et sont valides au 27/05/2025.</li>
       </ul>
     </aside>
