--- a/slides/exemples/airbnb.html
+++ b/slides/exemples/airbnb.html
@@ -149,7 +149,7 @@
   <h2>Airbnb - Pour aller plus loin</h2>
   <ul>
     <li><a target="_blank" href="https://medium.com/airbnb-engineering/tagged/microservices" target="_blank">Airbnb Engineering - Articles sur les microservices</a></li>
-    <li><a target="_blank" href="https://www.infoq.com/presentations/airbnb-culture-soa/" target="_blank">Conférence - The Human Side of Airbnb’s Microservice Architecture</a></li>
+    <li><a target="_blank" href="https://www.infoq.com/presentations/airbnb-culture-soa/" target="_blank">Conférence - The Human Side of Airbnb's Microservice Architecture</a></li>
     <li><a target="_blank" href="https://blog.bytebytego.com/p/a-brief-history-of-airbnbs-architecture" target="_blank">ByteByteGo - A Brief History of Airbnb's Architecture</a></li>
     <li><a target="_blank" href="https://blog.quastor.org/p/airbnbs-architecture" target="_blank">Quastor - Airbnb's Architecture</a></li>
   </ul>
