--- a/slides/exemples/doctolib.html
+++ b/slides/exemples/doctolib.html
@@ -143,13 +143,13 @@
 </section>
 
 <section>
-  <h2>Doctolib – Pour aller plus loin</h2>
+  <h2>Doctolib - Pour aller plus loin</h2>
   <ul>
-    <li><a href="https://medium.com/doctolib/scaling-making-doctolib-small-again-ff1268607c40" target="_blank">Scaling: Making Doctolib Small Again – Medium</a></li>
-    <li><a href="https://medium.com/doctolib/tagged/architecture" target="_blank">Doctolib – Articles sur l'architecture</a></li>
-    <li><a href="https://medium.com/doctolib/how-we-built-our-infrastructure-fail-over-checklist-5b31d4623136" target="_blank">How we built our infrastructure fail-over checklist – Medium</a></li>
-    <li><a href="https://medium.com/doctolib/integrating-an-https-interface-in-hospitals-using-mirth-connect-communication-server-55d178c31d45" target="_blank">Integrating an HTTPS interface in hospitals using Mirth Connect – Medium</a></li>
-    <li><a href="https://devoxx.be/talk/?id=20068" target="_blank">Devoxx Belgium – From monolith to multi-services, how a platform engineering approach transforms your business?</a></li>
+    <li><a href="https://medium.com/doctolib/scaling-making-doctolib-small-again-ff1268607c40" target="_blank">Scaling: Making Doctolib Small Again - Medium</a></li>
+    <li><a href="https://medium.com/doctolib/tagged/architecture" target="_blank">Doctolib - Articles sur l'architecture</a></li>
+    <li><a href="https://medium.com/doctolib/how-we-built-our-infrastructure-fail-over-checklist-5b31d4623136" target="_blank">How we built our infrastructure fail-over checklist - Medium</a></li>
+    <li><a href="https://medium.com/doctolib/integrating-an-https-interface-in-hospitals-using-mirth-connect-communication-server-55d178c31d45" target="_blank">Integrating an HTTPS interface in hospitals using Mirth Connect - Medium</a></li>
+    <li><a href="https://devoxx.be/talk/?id=20068" target="_blank">Devoxx Belgium - From monolith to multi-services, how a platform engineering approach transforms your business?</a></li>
   </ul>
   <aside class="notes">
     <ul>
